<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:card_view="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:id="@+id/source_card"
   card_view:cardCornerRadius="5dp"
   card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/article_image"
            android:contentDescription="@string/the_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:padding="30dp"
            card_view:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/article_title"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_title"
            card_view:layout_constraintTop_toBottomOf="@id/article_image"/>

        <TextView
            android:id="@+id/article_author"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/the_author"
            card_view:layout_constraintTop_toBottomOf="@id/article_title"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/article_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timestamp"
            android:gravity="end"
            card_view:layout_constraintTop_toBottomOf="@id/article_title"/>

        <TextView
            android:id="@+id/article_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_description"
            card_view:layout_constraintTop_toBottomOf="@id/article_author"/>

        <TextView
            android:id="@+id/article_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_source"
            card_view:layout_constraintTop_toBottomOf="@id/article_description"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

